--- a/src/Style/Calculator.css
+++ b/src/Style/Calculator.css
@@ -1,9 +1,11 @@
 .calculator {
     border: 1px solid #ccc;
     border-radius: 5px;
+    border-style: outset;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     width: 400px;
   }
+  
