--- a/src/Style/Keypad.css
+++ b/src/Style/Keypad.css
@@ -1,5 +1,5 @@
 .button{
-    background-color: #4CAF50;
+    background-color: #555555;
     border: none;
     color: white;
     padding: 15px 32px;
